--- a/app/components/layout/Header/CartButton/CartButton.module.scss
+++ b/app/components/layout/Header/CartButton/CartButton.module.scss
@@ -1,7 +1,5 @@
 .cartButton {
+    position: relative;
+    z-index: 1;
     transform: translateY(1px);
-}
-
-.cartIcon {
-    transform: translateY(10px);
 }
