--- a/app/components/layout/Header/AppLogo/AppLogo.module.scss
+++ b/app/components/layout/Header/AppLogo/AppLogo.module.scss
@@ -1,10 +1,11 @@
 .logo {
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     font-size: 25px;
     font-weight: bold;
     pointer-events: none;
     user-select: none;
+    margin-right: 20px;
 
     text-shadow: 2px 2px #00000020;
 }
