--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,4 +1,5 @@
 .body {
-    font-family: "Comfortaa";
-    background-color: #fff0f0;
+    font-family: "Rubik";
+    background-color: #000000;
+    color: white;
 }
