--- a/app/components/layout/Header/AppLogo/AppLogo.module.scss
+++ b/app/components/layout/Header/AppLogo/AppLogo.module.scss
@@ -1,4 +1,5 @@
 .logo {
+    position: relative;
     color: #ffffff;
     text-decoration: none;
     font-size: 25px;
@@ -6,6 +7,15 @@
     pointer-events: none;
     user-select: none;
     margin-right: 20px;
+    text-wrap: nowrap;
 
-    text-shadow: 2px 2px #00000020;
+    &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background-color: #ffffff;
+        border-radius: 2px;
+        transform: translate(0px, 32px);
+    }
 }
