--- a/src/components/shop/CategoryCard/CategoryCard.module.scss
+++ b/src/components/shop/CategoryCard/CategoryCard.module.scss
@@ -43,21 +43,43 @@
     font-weight: bold;
     font-size: 25px;
     margin: 0;
-    margin-bottom: 10px;
     letter-spacing: 1.3px;
-
-    &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 30px;
-        width: 100%;
-        height: 1px;
-        background-color: white;
-    }
 }
 
 .title {
     line-height: 25px;
     font-weight: 400;
+}
+
+.decorativeCircle {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    outline: 1px solid #444444;
+    background-color: #000000;
+    cursor: default;
+
+    &::before {
+        content: "";
+        position: absolute;
+        right: 0;
+        transform: translate(31px, 15px);
+        border-top: 1px solid #444444;
+        border-bottom: 1px solid #444444;
+        width: 35px;
+        height: 20px;
+        background-color: #000000;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        width: 49px;
+        height: 49px;
+        left: 0.9px;
+        top: 0.9px;
+        border-radius: 100%;
+        background-color: #000000;
+    }
 }
