--- a/src/components/shop/CategoryCard/CategoryCard.module.scss
+++ b/src/components/shop/CategoryCard/CategoryCard.module.scss
@@ -16,6 +16,11 @@
     &:hover {
         background-image: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 1) 36%, #1a1a1a 36%);
     }
+
+    &:focus,
+    :focus-visible {
+        outline: #52a8ff solid 2px;
+    }
 }
 
 .image {
