--- a/src/components/shop/CategoryCard/CategoryCard.module.scss
+++ b/src/components/shop/CategoryCard/CategoryCard.module.scss
@@ -49,9 +49,20 @@
     font-size: 25px;
     margin: 0;
     letter-spacing: 1.3px;
+
+    &::before {
+        content: "";
+        position: absolute;
+        width: 150%;
+        height: 1px;
+        bottom: -15px;
+        left: -20px;
+        background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(0, 0, 0, 0) 100%);
+    }
 }
 
 .title {
+    position: relative;
     line-height: 25px;
     font-weight: 400;
     color: #959595;
