--- a/src/components/common/ErrorHandler/ErrorHandler.module.scss
+++ b/src/components/common/ErrorHandler/ErrorHandler.module.scss
@@ -1,16 +1,26 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .error {
+    position: relative;
     padding: 20px;
     outline: 1px solid #444444;
+    background-color: #0a0a0a;
     border-radius: 10px;
     width: auto;
+    max-width: 500px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
 }
 .error__icon {
-    transform: scale(4) translateY(2px);
+    transform: translateY(2px);
 }
 
 .error__content {
@@ -24,6 +34,12 @@
 .error__header {
     margin: 0;
 }
+
+.error__description {
+    margin: 5px 0;
+    color: #959595;
+}
+
 .error__button {
     border: none;
     outline: none;
