--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -5,9 +5,10 @@
 }
 
 .container {
-    padding: 30px 0;
+    padding: 30px 20px;
     margin: auto;
     width: 1200px;
+    box-sizing: border-box;
 
     @media (max-width: 1300px) {
         width: 100%;
