--- a/src/components/shop/[category]/ProductCards/ProductCard.module.scss
+++ b/src/components/shop/[category]/ProductCards/ProductCard.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: 20px;
     padding: 10px;
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: self-start;
+    align-items: flex-start;
     width: 100%;
     gap: 20px;
 }
