--- a/src/components/shop/[category]/[id]/ProductPage/ProductPage.module.scss
+++ b/src/components/shop/[category]/[id]/ProductPage/ProductPage.module.scss
@@ -9,7 +9,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: 60px;
     margin-bottom: 100px;
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     gap: 40px;
 }
 
