Added cart functionality (adding products, saving to localstorage)

--- a/src/components/layout/Header/CartButton/CartItemCounter/CartItemCounter.module.scss
+++ b/src/components/layout/Header/CartButton/CartItemCounter/CartItemCounter.module.scss
@@ -1,3 +1,12 @@
 .counter {
     transform: translateY(1px);
 }
+
+.spin {
+    position: relative;
+    transform: translateY(-2px);
+
+    & > span > svg {
+        fill: #000000;
+    }
+}
