Font optimization via next/font

--- a/src/components/shop/[category]/ProductCards/ProductCard.module.scss
+++ b/src/components/shop/[category]/ProductCards/ProductCard.module.scss
@@ -50,7 +50,7 @@
     text-decoration: none;
     color: white;
 
-    font-weight: bold;
+    font-weight: 500;
     font-size: 25px;
 
     &::after {
@@ -100,6 +100,5 @@
 
 .price {
     margin: 0;
-    font-weight: bolder;
     font-size: 30px;
 }
