--- a/src/components/layout/Header/AppLogo/AppLogo.module.scss
+++ b/src/components/layout/Header/AppLogo/AppLogo.module.scss
@@ -3,7 +3,7 @@
     color: #ffffff;
     text-decoration: none;
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 400;
     pointer-events: none;
     user-select: none;
     margin-right: 20px;
@@ -13,7 +13,7 @@
         content: "";
         position: absolute;
         width: 100%;
-        height: 3px;
+        height: 2px;
         background-color: #ffffff;
         border-radius: 2px;
         transform: translate(0px, 32px);
