--- a/src/components/shop/CategoryCard/CategoryCard.module.scss
+++ b/src/components/shop/CategoryCard/CategoryCard.module.scss
@@ -5,7 +5,7 @@
     background-image: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 1) 36%, #0a0a0a 36%);
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: 20px;
     outline: 1px solid #444444;
